Style cleanup
Signed-off-by: TheMode <themode@outlook.fr>